{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 19,
  "lineage": "f07403c2-d136-f04c-476e-4a0e1ebfc212",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_ec2_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:527439806336:security-group/sg-00063a99dce7c2fb1",
            "description": "Allow TLS inbound traffic and all outbound traffic 1",
            "egress": [],
            "id": "sg-00063a99dce7c2fb1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sg_ec2_1",
            "name_prefix": "",
            "owner_id": "527439806336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_ec2_1"
            },
            "tags_all": {
              "Name": "sg_ec2_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c57a128a49d7733"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:527439806336:vpc/vpc-04c57a128a49d7733",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0a85f189878a74c6b",
            "default_route_table_id": "rtb-00b01a7255c73c44f",
            "default_security_group_id": "sg-02139fd60a77625fc",
            "dhcp_options_id": "dopt-0e56efe36d764c90f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04c57a128a49d7733",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00b01a7255c73c44f",
            "owner_id": "527439806336"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:527439806336:security-group-rule/sgr-0141e73d62e56d58e",
            "cidr_ipv4": "10.1.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0141e73d62e56d58e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00063a99dce7c2fb1",
            "security_group_rule_id": "sgr-0141e73d62e56d58e",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_ec2_1",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}